[package]
name = "ci_tools"
version = "0.3.0"
authors = ["VMM <vladimirov.m.m@ya.ru>"]
edition = "2018"

[dependencies]
regex = "*"
mysql = "*"
env_logger ="*"
isahc = { git = "https://github.com/sagebind/isahc.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
url = "*"
rustc-serialize = "*"
